Basic code to test button handling

--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -23,7 +23,13 @@
 	</div>
 	<script type="text/javascript">
 		// Canvas Drawing Code Here
+		
+		function canvasBtnHandler () {
+		  console.log('Run clicked');
+		  }
 
+		  
+		document.getElementById('canvasRun').addEventListener('click', canvasBtnHandler, false);  
 	</script>
 </body>
 </html>
