added getContext check for canvas

--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -26,6 +26,14 @@
 		
 		function canvasBtnHandler () {
 		  console.log('Run clicked');
+		  var canvas = document.getElementById('myCanvas');
+		  if (canvas.getContext){
+		  var ctx = canvas.getContext('2d');
+			console.log('Canvas clear');
+		  } else {
+			console.log('Canvas Failed');
+		  }
+		
 		  }
 
 		  
