--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -28,7 +28,7 @@
 		  console.log('Run clicked');
 		  var canvas = document.getElementById('myCanvas');
 		  if (canvas.getContext){
-		  var cnvs = canvas.getContext('2d');
+			var cnvs = canvas.getContext('2d');
 			console.log('Canvas clear');
 			
 			var my_gradient = cnvs.createLinearGradient(0, 450, 0, 0);
@@ -36,15 +36,27 @@
 			my_gradient.addColorStop(1, "white");
 			cnvs.fillStyle = my_gradient;
 			cnvs.fillRect(20, 20, 600, 450);
+			
+			cnvs.fillStyle = "#00C800";
+			var height = 90 * (Math.sqrt(3)/2);
+			cnvs.beginPath();
+			cnvs.moveTo(110, 280);
+			cnvs.lineTo(160, 370);
+			cnvs.lineTo(60, 370);
+			cnvs.lineTo(110, 280);
+			cnvs.fill();
+			cnvs.closePath();
+			
 
-				var img = new Image();   // Create new img element
-				img.addEventListener("load", function() {
-				  // execute drawImage statements here
-				  console.log(img);
-				  cnvs.drawImage(img, 340, 355, 250,70);
 
-				}, false);
-				img.src = 'images/IIT_SAT_stack_186_white.png'; // Set source path
+			var img = new Image();   // Create new img element
+			img.addEventListener("load", function() {
+			console.log(img);
+			cnvs.drawImage(img, 340, 355, 250,70);
+			}, false);
+			img.src = 'images/IIT_SAT_stack_186_white.png'; // Set source pat
+			
+			
 		  } else {
 			console.log('Canvas Failed');
 		  }
