added the text fro name and email

--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -47,7 +47,10 @@
 			cnvs.fill();
 			cnvs.closePath();
 			
-
+			cnvs.fillStyle = "#FFFFFF";
+			cnvs.font = '14px sans serif';
+			cnvs.fillText('Thomas Boller', 50, 410);
+			cnvs.fillText('tboller@hawk.iit.edu', 50, 430);
 
 			var img = new Image();   // Create new img element
 			img.addEventListener("load", function() {
