--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -81,6 +81,20 @@
 			cnvs.lineWidth = 3;
 			cnvs.strokeStyle = "#FFFFFF";
 			cnvs.stroke();
+			
+			
+			//create square
+			
+				var rectangle = canvas.getContext('2d');
+				rectangle.fillStyle = "#C80000";
+			    rectangle.fillRect(460, 130, 110, 110);
+				rectangle.lineWidth = 6;
+				rectangle.strokeStyle = "#FFFFFF";
+				rectangle.strokeRect(460, 130, 110, 110);
+
+
+				
+			
 
 			
 			//creates image
