--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -93,6 +93,13 @@
 				rectangle.strokeRect(460, 130, 110, 110);
 
 
+				//noodle
+				var noodle = canvas.getContext('2d');
+				noodle.beginPath();
+				noodle.arc(290, 180, 50, 1.3 * Math.PI, 0.2 * Math.PI, false);
+				noodle.lineWidth = 10;
+				rectangle.strokeStyle = "#FFA500";				
+				noodle.stroke();
 				
 			
 
