adjusted title underline width

--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -64,6 +64,7 @@
 			cnvs.beginPath();
 			cnvs.moveTo(35,100);
 			cnvs.lineTo(575,100);	
+			cnvs.lineWidth = 5;
 			cnvs.strokeStyle = "#C80000";			
 			cnvs.stroke();
 
