--- a/tboller_lab5.html
+++ b/tboller_lab5.html
@@ -102,7 +102,14 @@
 				rectangle.strokeStyle = "#FFA500";				
 				noodle.stroke();
 				
+			//create rectangle
 			
+				var rectangle = canvas.getContext('2d');
+				rectangle.fillStyle = "#FFFFFF";
+			    rectangle.fillRect(340, 250, 250, 90);
+				rectangle.lineWidth = 6;
+				rectangle.strokeStyle = "#FFFFFF";
+				rectangle.strokeRect(460, 130, 110, 110);			
 
 			
 			//creates image
